# rust-vs-python

./: .gitignore  README.md
numpy-vs-ndarray/: README.md
numpy-vs-ndarray/python/: argmax_max.py
numpy-vs-ndarray/rust/: Cargo.toml
numpy-vs-ndarray/rust/src/: main.rs
python/infrastructure/: python_lambda.py
python/src/: handler.py
rust/: Cargo.toml
rust/infrastructure/: rust_lambda.py
serverless-aws-lambda/: README.md  run_load.py
serverless-aws-lambda/python/: app.py
serverless-aws-lambda/python/infrastructure/: python_lambda.py
serverless-aws-lambda/python/src/: handler.py
serverless-aws-lambda/rust/src/: lib.rs
webservice/: README.md
webservice-decoding-in-rust-vs-pure-python/: README.md
webservice-decoding-in-rust-vs-pure-python/python/: app.py  requirements.txt
webservice-decoding-in-rust-vs-pure-python/rust/: Cargo.toml
webservice-decoding-in-rust-vs-pure-python/rust/src/: main.rs
webservice-python-ffi/: README.md  locust_benchmark.py
webservice-python-ffi-onnx/: README.md
webservice-python-ffi-onnx/python/: app.py
webservice-python-ffi-onnx/rust/: dockerfile  handler.py
webservice-python-ffi/python/: app.py  dockerfile
webservice-python-ffi/robyn/: app.py  requirements.txt
webservice-transformers-onnxruntime/: .gitignore  README.md  convert.py
webservice-transformers-onnxruntime/python/: requirements.txt
webservice-transformers-onnxruntime/rust/: Cargo.toml  dockerfile
webservice-transformers-onnxruntime/rust/src/: main.rs
webservice/python/: app.py
webservice/rust/: Cargo.toml
(+4 files in other folders)
